--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
         }
     },
     "require": {
-        "phpoffice/phpspreadsheet": "1.23"
+        "phpoffice/phpspreadsheet": "1.23",
+        "phpmailer/phpmailer": "^6.10",
+        "altorouter/altorouter": "^2.0"
     }
 }
