modifications des fichiers , recuperation des vues dans le dossier to_delete , mises à jour des fichiers contenant les routes , ajout des routes pour les eleves surtout , et une route pour les admins fin le reste est à venir

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,14 @@
     "name": "pc/mc-legende",
     "autoload": {
         "psr-4": {
-            "Pc\\McLegende\\": "src/"
+            "Pc\\McLegende\\": "src/",
+            "App\\": "app/",
+            "Controllers\\": "controller/",
+            "Models\\": "models/",
+            "Router\\": "router/",
+            "Config\\": "config/",
+            "Message\\": "message/",
+            "Middlewares\\": "middleware/"
         }
     },
     "require": {
