renforcement de la securiter, reglage de quelque conflit et de quelque lien, ajout des test et de quelque model, controller et middleware

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "Router\\": "router/",
             "Config\\": "config/",
             "Message\\": "message/",
-            "Middlewares\\": "middleware/"
+            "Middleware\\": "middleware/"
         }
     },
     "require": {
